[package]
name = "four-char-code"
version = "2.0.0"
edition = "2018"
description = "A string of 4 ascii chars represented by an u32"
homepage = "https://github.com/shurizzle/rust-four-char-code"
repository = "https://github.com/shurizzle/rust-four-char-code"
license-file = "LICENSE"
authors = ["shurizzle <shura1991@gmail.com>"]


[package.metadata]
msrv = "1.57.0"

[features]
default = ["std"]
std = []
