[package]
name = "four-char-code"
version = "2.0.2"
edition = "2018"
description = "A string of 4 ascii chars represented by an u32"
license = "MIT"
readme = "README.md"
authors = ["shurizzle <shura1991@gmail.com>"]
homepage = "https://github.com/shurizzle/rust-four-char-code"
repository = "https://github.com/shurizzle/rust-four-char-code"
documentation = "https://docs.rs/four-char-code"

[package.metadata]
msrv = "1.57.0"

[features]
default = ["std"]
std = []
