[package]
name = "four-char-code"
description = "Type a string of 4 chars represented by an u32 type"
homepage = "https://github.com/shurizzle/rust-four-char-code"
repository = "https://github.com/shurizzle/rust-four-char-code"
license-file = "../LICENSE"
version = "0.0.2"
authors = ["Domenico Shura <shura1991@gmail.com>"]
edition = "2018"

[dependencies]
proc-macro-hack = "0.5"

[dependencies.four-char-code-macros-impl]
path = "../four-char-code-macros-impl"
version = "0.0.1"
