[package]
name = "four-char-code-macros-impl"
description = "Macros for four-char-code package"
homepage = "https://github.com/shurizzle/rust-four-char-code"
repository = "https://github.com/shurizzle/rust-four-char-code"
license-file = "../LICENSE"
version = "1.0.0"
authors = ["shurizzle <shura1991@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
syn = { version = "1", features = ["derive"] }
